--- a/package.json
+++ b/package.json
@@ -8,15 +8,25 @@
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "npm run build && gcloud app deploy app.yaml"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "aws-sdk": "^2.423.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.0.2",
+    "cors": "^2.8.5",
+    "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "iview": "^3.3.0",
-    "nuxt": "^1.0.0"
+    "jsonwebtoken": "^8.5.0",
+    "morgan": "^1.9.1",
+    "nodemailer": "^5.1.1",
+    "nuxt": "^1.0.0",
+    "vue-particles": "^1.0.9",
+    "vue2-animate": "^2.1.0"
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
